# aziza

./: .gitignore  README.md  deploy.sh  netlify-build.sh  netlify.toml
api/: .env.example  pyproject.toml
api/app/: main.py
api/app/api/: deps.py
api/app/api/v1/: __init__.py  admin.py  admin_ops.py  auth.py  catalog.py  courier.py  health.py  orders.py
api/app/core/: config.py  database.py  security.py
api/app/models/: __init__.py  _base.py  catalog.py  order.py  promo.py  push.py  subscription.py  user.py
api/app/schemas/: auth.py  catalog.py  common.py  orders.py
api/app/seed/: data.py  run.py
app/: README.md  l10n.yaml  pubspec.yaml
app/android/app/: build.gradle.kts
app/assets/demo/: categories.json  product_manty-beef-classic.json  product_manty-chicken.json  product_manty-lamb.json  product_manty-pumpkin.json  product_pelmeni-classic.json  product_pelmeni-fish.json  product_pelmeni-siberian.json  product_samsa-beef.json  product_samsa-cheese-greens.json  product_samsa-lamb.json  product_sauce-garlic-yogurt.json  product_sauce-sour-cream.json  product_sauce-tomato-spicy.json  product_sauce-vinegar.json  products_list.json
app/lib/: main.dart  main_admin.dart  main_client.dart  main_courier.dart
app/lib/core/: providers.dart
app/lib/l10n/: app_en.arb  app_kk.arb  app_ru.arb
app/web/: index.html  manifest.json
docs/: INFRA.md  PRODUCTION.md  SPEC.md
landing/: index.html
web/admin/: app.js  index.html  styles.css
web/client/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
web/courier/: app.js  index.html  styles.css
(+34 files in other folders)
