[project]
name = "aziza-api"
version = "0.1.0"
description = "Aziza Food backend API"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy[asyncio]==2.0.36",
    "aiosqlite==0.20.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[argon2]==1.7.4",
    "argon2-cffi==23.1.0",
    "python-multipart==0.0.19",
    "httpx==0.28.1",
    "orjson==3.10.12",
]

# Production extras: switch to managed Postgres + Redis when going live.
# See docs/PRODUCTION.md.
[project.optional-dependencies]
prod = [
    "asyncpg==0.30.0",
    "redis==5.2.1",
    "alembic==1.14.0",
]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.8.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ASYNC", "S", "C4", "RET", "SIM"]
ignore = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
